--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,8 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 </project>
