--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.3.174</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 	<properties>
